Post IROS update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -85152,14 +85152,17 @@
 	Year = 2000}
 
 @book{schmidt01:_patter_orien_softw_archit,
-	Address = {West Sussex, UK},
-	Author = {D. Schmidt and M. Stal and H. Rohnert and F. Buschmann},
-	Month = {April},
-	Note = {ISBN 0-471-60695-2},
-	Publisher = {John Wiley \& Sons, Ltd.},
-	Title = {Pattern-Oriented Software Architecture: Patterns of Cncurrent and Networked Objects},
-	Volume = 2,
-	Year = 2001}
+  Address =      {West Sussex, UK},
+  Author =       {D. Schmidt and M. Stal and H. Rohnert and F.
+                  Buschmann},
+  Month =        {April},
+  Note =         {ISBN 0-471-60695-2},
+  Publisher =    {John Wiley \& Sons, Ltd.},
+  Title =        {Pattern-Oriented Software Architecture: Patterns of
+                  Cncurrent and Networked Objects},
+  Volume =       2,
+  Year =         2001
+}
 
 @article{schmidt97:_local_grayv_invar_image_retriev,
 	Author = {Cordelia Schmidt and Roger Mohr},
@@ -90130,3 +90133,697 @@
   pages =        {1738-1757}
 }
 
+@Book{flyvberg03:MegaProjects,
+  author =       {Bent Flyvberg and Nils Bruzelius and Werner
+                  Rothengatter},
+  title =        {Mega Projects and Risk - An Anatomy of Ambition},
+  publisher =    {Cambridge University Press},
+  year =         2003,
+  address =      {Cambridge, UK},
+  edition =      {3rd - 2013}
+}
+
+@inproceedings{balntas2017hpatches,
+  title =        {HPatches: A benchmark and evaluation of handcrafted
+                  and learned local descriptors},
+  author =       {Balntas, Vassileios and Lenc, Karel and Vedaldi,
+                  Andrea and Mikolajczyk, Krystian},
+  booktitle =    {Proceedings of the IEEE conference on computer
+                  vision and pattern recognition},
+  pages =        {5173--5182},
+  year =         2017
+}
+
+@article{zheng2017sift,
+  title =        {SIFT meets CNN: A decade survey of instance
+                  retrieval},
+  author =       {Zheng, Liang and Yang, Yi and Tian, Qi},
+  journal =      {IEEE transactions on pattern analysis and machine
+                  intelligence},
+  volume =       40,
+  number =       5,
+  pages =        {1224--1244},
+  year =         2017,
+  publisher =    {IEEE}
+}
+
+@article {neumanrobomorphic,
+  title =        {Robomorphic Computing: A Design Methodology for
+                  Domain-Specific Accelerators Parameterized by Robot
+                  Morphology},
+  year =         {2021},
+  abstract =     {Robotics applications have hard time constraints and
+                  heavy computational burdens that can greatly benefit
+                  from domain-specific hardware accelerators. For the
+                  latency-critical problem of robot motion planning
+                  and control, there exists a performance gap of at
+                  least an order of magnitude between joint actuator
+                  response rates and state-of-the-art software
+                  solutions. Hardware acceleration can close this gap,
+                  but it is essential to define automated hardware
+                  design flows to keep the design process agile as
+                  applications and robot platforms evolve. To address
+                  this challenge, we introduce robomorphic computing:
+                  a methodology to transform robot morphology into a
+                  customized hardware accelerator morphology. In this
+                  work, we (i) present this design methodology, using
+                  robot topology and structure to exploit parallelism
+                  and matrix sparsity patterns in accelerator
+                  hardware; (ii) use the methodology to generate a
+                  parameterized accelerator design for the gradient of
+                  rigid body dynamics, a key kernel in motion
+                  planning; (iii) evaluate FPGA and synthesized ASIC
+                  implementations of this accelerator for an
+                  industrial manipulator robot; and (iv) describe how
+                  the design can be automatically customized for other
+                  robot models. Using robomorphic computing, our FPGA
+                  accelerator achieves speedups of 8x and 86x over
+                  CPU and GPU latency, and maintains an overall
+                  speedup from 1.9x to 2.9x deployed in an
+                  end-to-end coprocessor system. ASIC synthesis
+                  indicates an additional factor of 7.2x. We
+                  describe how this principled approach generalizes to
+                  more complex robot platforms, such as quadrupeds and
+                  humanoids, as well as to other computational kernels
+                  in robotics, outlining a path forward for future
+                  robomorphic computing accelerators.},
+  journal =      {International Conference on Architectural Support
+                  for Programming Languages and Operating Systems},
+  url =
+                  {https://asplos-conference.org/abstracts/asplos21-paper857-extended_abstract.pdf},
+  author =       {Neuman, Sabrina M and Brian Plancher and Thomas
+                  Bourgeat and Thierry Tambe and Srinivas Devadas and
+                  Vijay Janapa Reddi}
+}
+
+@book{barfoot_2017,
+  place =        {Cambridge},
+  title =        {State Estimation for Robotics},
+  DOI =          {10.1017/9781316671528},
+  publisher =    {Cambridge University Press},
+  author =       {Barfoot, Timothy D.},
+  year =         {2017}
+}
+
+@article{doi:10.7305/automatika.2014.09.847,
+  author =       {Ivan Marković and Prof. Ivan Petrović},
+  title =        {Bayesian Sensor Fusion Methods for Dynamic Object
+                  Tracking—A Comparative Study},
+  journal =      {Automatika},
+  volume =       55,
+  number =       4,
+  pages =        {386-398},
+  year =         2014,
+  publisher =    {Taylor & Francis},
+  doi =          {10.7305/automatika.2014.09.847},
+  URL =          { https://doi.org/10.7305/automatika.2014.09.847 },
+  eprint =       { https://doi.org/10.7305/automatika.2014.09.847 }
+}
+
+
+@article{sethi1990flexibility,
+  title =        {Flexibility in manufacturing: a survey},
+  author =       {Sethi, Andrea Krasa and Sethi, Suresh Pal},
+  journal =      {International journal of flexible manufacturing
+                  systems},
+  volume =       2,
+  number =       4,
+  pages =        {289--328},
+  year =         1990,
+  publisher =    {Springer}
+}
+
+
+@article{cho_warnecke_gweon_1987,
+  title =        {Robotic assembly: a synthesizing overview},
+  volume =       5,
+  DOI =          {10.1017/S0263574700015332},
+  number =       2,
+  journal =      {Robotica},
+  publisher =    {Cambridge University Press},
+  author =       {Cho, H. S. and Warnecke, H. J. and Gweon, D. G.},
+  year =         1987,
+  pages =        {153–165}
+}
+
+@article{doi:10.1080/01691864.2019.1705910,
+  author =       {Felix von Drigalski and Christian Schlette and
+                  Martin Rudorfer and Nikolaus Correll and Joshua C.
+                  Triyonoputro and Weiwei Wan and Tokuo Tsuji and
+                  Tetsuyou Watanabe},
+  title =        {Robots assembling machines: learning from the World
+                  Robot Summit 2018 Assembly Challenge},
+  journal =      {Advanced Robotics},
+  volume =       34,
+  number =       {7-8},
+  pages =        {408-421},
+  year =         2020,
+  publisher =    {Taylor & Francis},
+  doi =          {10.1080/01691864.2019.1705910},
+  URL =          { https://doi.org/10.1080/01691864.2019.1705910 },
+  eprint =       { https://doi.org/10.1080/01691864.2019.1705910 }
+}
+
+@article{5985520,
+  author =       {S. Y. {Chen}},
+  journal =      {IEEE Transactions on Industrial Electronics},
+  title =        {Kalman Filter for Robot Vision: A Survey},
+  year =         2012,
+  volume =       59,
+  number =       11,
+  pages =        {4409-4420},
+  doi =          {10.1109/TIE.2011.2162714}
+}
+
+@inproceedings{gautam2018experimental,
+  title =        {Experimental Evaluation of Multi-Robot Online
+                  Terrain Coverage Approach},
+  author =       {Gautam, Avinash and Richhariya, Aashish and
+                  Shekhawat, Virendra Singh and Mohan, Sudeept},
+  booktitle =    {2018 IEEE International Conference on Robotics and
+                  Biomimetics (ROBIO)},
+  pages =        {1183--1189},
+  year =         {2018},
+  organization = {IEEE}
+}
+
+@article{senthilkumar2012multi,
+  title =        {Multi-robot exploration and terrain coverage in an
+                  unknown environment},
+  author =       {Senthilkumar, KS and Bharadwaj, Kamal Kant},
+  journal =      {Robotics and Autonomous Systems},
+  volume =       {60},
+  number =       {1},
+  pages =        {123--132},
+  year =         {2012},
+  publisher =    {Elsevier}
+}
+
+@article{Senthilkumar2010MultiRobotTC,
+  title =        {Multi-Robot Terrain Coverage by Constructing
+                  Multiple Spanning Trees Simultaneously},
+  author =       {K. S. Senthilkumar and K. K. Bharadwaj},
+  journal =      {Int. J. Robotics Autom.},
+  year =         {2010},
+  volume =       {25}
+}
+
+@article{zheng2010multirobot,
+  title =        {Multirobot forest coverage for weighted and
+                  unweighted terrain},
+  author =       {Zheng, Xiaoming and Koenig, Sven and Kempe, David
+                  and Jain, Sonal},
+  journal =      {IEEE Transactions on Robotics},
+  volume =       {26},
+  number =       {6},
+  pages =        {1018--1031},
+  year =         {2010},
+  publisher =    {IEEE}
+}
+
+% Mars terrain paper
+
+@article{yingst2016characteristics,
+  title =        {Characteristics of pebble and cobble-sized clasts
+                  along the Curiosity rover traverse from sol 100 to
+                  750: Terrain types, potential sources, and transport
+                  mechanisms},
+  author =       {Yingst, RA and Cropper, K and Gupta, S and Kah, LC
+                  and Williams, RME and Blank, J and Calef III, F and
+                  Hamilton, Victoria E and Lewis, K and Shechet, J and
+                  others},
+  journal =      {Icarus},
+  volume =       {280},
+  pages =        {72--92},
+  year =         {2016},
+  publisher =    {Elsevier}
+}
+
+@incollection{arvidson2014roving,
+  title =        {Roving on Mars with Opportunity and Curiosity:
+                  terramechanics and terrain properties},
+  author =       {Arvidson, Raymond E},
+  booktitle =    {Earth and Space 2014},
+  year =         {2014},
+  pages =        {165--173}
+}
+
+@article{arvidson2014terrain,
+  title =        {Terrain physical properties derived from orbital
+                  data and the first 360 sols of Mars Science
+                  Laboratory Curiosity rover observations in Gale
+                  Crater},
+  author =       {Arvidson, RE and Bellutta, P and Calef, F and
+                  Fraeman, AA and Garvin, James B and Gasnault, O and
+                  Grant, John A and Grotzinger, JP and Hamilton, VE
+                  and Heverly, M and others},
+  journal =      {Journal of Geophysical Research: Planets},
+  volume =       {119},
+  number =       {6},
+  pages =        {1322--1344},
+  year =         {2014},
+  publisher =    {Wiley Online Library}
+}
+
+% computational geometry
+
+@article{agarwal1994number,
+  title =        {On the number of views of polyhedral terrains},
+  author =       {Agarwal, Pankaj K and Sharir, Micha},
+  journal =      {Discrete \& Computational Geometry},
+  volume =       {12},
+  number =       {2},
+  pages =        {177--182},
+  year =         {1994},
+  publisher =    {Springer}
+}
+
+@misc{chesnokov2018art,
+  title =        {The Art Gallery Problem: An Overview and Extension
+                  to Chromatic Coloring and Mobile Guards},
+  author =       {Chesnokov, Nicole},
+  year =         {2018}
+}
+
+@inproceedings{kroller2013novel,
+  title =        {A novel efficient approach for solving the art
+                  gallery problem},
+  author =       {Kr{\"o}ller, Alexander and Moeini, Mahdi and
+                  Schmidt, Christiane},
+  booktitle =    {International Workshop on Algorithms and
+                  Computation},
+  pages =        {5--16},
+  year =         2013,
+  organization = {Springer}
+}
+
+%%GIS
+@inproceedings{kang2019regional,
+  title =        {Regional terrain complexity evaluation based on GIS
+                  and K-means clustering model: a case study of Ningdu
+                  County, China},
+  author =       {Kang, Wenjing and Huang, Faming and Du, Yaoxian and
+                  Liu, Dalin and Cao, Zhongshan},
+  booktitle =    {IOP Conference Series: Earth and Environmental
+                  Science},
+  volume =       300,
+  number =       2,
+  pages =        022025,
+  year =         2019,
+  organization = {IOP Publishing}
+}
+@article{liu2017state,
+  title =        {A state-of-the-art review on the integration of
+                  Building Information Modeling (BIM) and Geographic
+                  Information System (GIS)},
+  author =       {Liu, Xin and Wang, Xiangyu and Wright, Graeme and
+                  Cheng, Jack CP and Li, Xiao and Liu, Rui},
+  journal =      {ISPRS International Journal of Geo-Information},
+  volume =       {6},
+  number =       {2},
+  pages =        {53},
+  year =         {2017},
+  publisher =    {Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{castro2014gis,
+  title =        {GIS-BIM framework for integrating urban systems,
+                  waste stream and algal cultivation in residential
+                  construction},
+  author =       {Castro-Lacouture, Daniel and Quan, Steven Jige and
+                  Yang, Perry Pei-Ju},
+  booktitle =    {ISARC. Proceedings of the International Symposium on
+                  Automation and Robotics in Construction},
+  volume =       {31},
+  pages =        {1},
+  year =         {2014},
+  organization = {IAARC Publications}
+}
+
+@article{cricsan2017emergency,
+  title =        {Emergency management using geographic information
+                  systems: application to the first romanian traveling
+                  salesman problem instance},
+  author =       {Cri{\c{s}}an, Gloria Cerasela and Pintea, Camelia-M
+                  and Palade, Vasile},
+  journal =      {Knowledge and Information Systems},
+  volume =       {50},
+  number =       {1},
+  pages =        {265--285},
+  year =         {2017},
+  publisher =    {Springer}
+}
+
+@article{de2017use,
+  title =        {The use of UAV and geographic information systems
+                  for facility location in a post-disaster scenario},
+  author =       {de Oliveira Silva, Leandro and de Mello Bandeira,
+                  Renata Albergaria and Campos, V{\^a}nia Barcellos
+                  Gouv{\^e}a},
+  journal =      {Transportation Research Procedia},
+  volume =       {27},
+  pages =        {1137--1145},
+  year =         {2017},
+  publisher =    {Elsevier}
+}
+
+@inproceedings{rackliffe2011using,
+  title =        {Using geographic information systems (GIS) for UAV
+                  landings and UGV navigation},
+  author =       {Rackliffe, Nathan and Yanco, Holly A and Casper,
+                  Jennifer},
+  booktitle =    {2011 IEEE Conference on Technologies for Practical
+                  Robot Applications},
+  pages =        {145--150},
+  year =         {2011},
+  organization = {IEEE}
+}
+
+%%terrain + robots
+
+@book{iagnemma2004mobile,
+  title =        {Mobile robots in rough terrain: Estimation, motion
+                  planning, and control with application to planetary
+                  rovers},
+  author =       {Iagnemma, Karl and Dubowsky, Steven},
+  volume =       {12},
+  year =         {2004},
+  publisher =    {Springer Science \& Business Media}
+}
+
+@inproceedings{otsu2016energy,
+  title =        {Energy-aware terrain analysis for mobile robot
+                  exploration},
+  author =       {Otsu, Kyohei and Kubota, Takashi},
+  booktitle =    {Field and Service Robotics},
+  pages =        {373--388},
+  year =         {2016},
+  organization = {Springer}
+}
+
+@inproceedings{brooks2005vibration,
+  title =        {Vibration-based terrain analysis for mobile robots},
+  author =       {Brooks, Christopher and Iagnemma, Karl and Dubowsky,
+                  Steven},
+  booktitle =    {Proceedings of the 2005 IEEE International
+                  Conference on Robotics and Automation},
+  pages =        {3415--3420},
+  year =         {2005},
+  organization = {IEEE}
+}
+
+@inproceedings{thrun2006probabilistic,
+  title =        {Probabilistic Terrain Analysis For High-Speed Desert
+                  Driving.},
+  author =       {Thrun, Sebastian and Montemerlo, Michael and Aron,
+                  Andrei},
+  booktitle =    {Robotics: Science and Systems},
+  pages =        {16--19},
+  year =         {2006}
+}
+
+@inproceedings{siva2019robot,
+  title =        {Robot adaptation to unstructured terrains by joint
+                  representation and apprenticeship learning},
+  author =       {Siva, Sriram and Wigness, Maggie and Rogers, John
+                  and Zhang, Hao},
+  booktitle =    {Robotics: science and systems},
+  year =         {2019}
+}
+
+
+%% game
+@article{macharet2020adaptive,
+  title =        {Adaptive Partitioning for Coordinated Multi-agent
+                  Perimeter Defense},
+  author =       {Macharet, Douglas G and Chen, Austin K and Shishika,
+                  Daigo and Pappas, George J and Kumar, Vijay},
+  booktitle =    {IROS},
+  year =         {2020},
+}
+
+@article{shishika2020cooperative,
+  title =        {Cooperative team strategies for multi-player
+                  perimeter-defense games},
+  author =       {Shishika, Daigo and Paulos, James and Kumar, Vijay},
+  journal =      {IEEE Robotics and Automation Letters},
+  volume =       {5},
+  number =       {2},
+  pages =        {2738--2745},
+  year =         {2020},
+  publisher =    {IEEE}
+}
+
+@inproceedings{machado2002multi,
+  title =        {Multi-agent patrolling: An empirical analysis of
+                  alternative architectures},
+  author =       {Machado, Aydano and Ramalho, Geber and Zucker,
+                  Jean-Daniel and Drogoul, Alexis},
+  booktitle =    {International workshop on multi-agent systems and
+                  agent-based simulation},
+  pages =        {155--170},
+  year =         {2002},
+  organization = {Springer}
+}
+@article{xiong2007agent,
+  title =        {Agent negotiation of target distribution enhancing
+                  system survivability},
+  author =       {Xiong, Ning and Christensen, Henrik and Svensson,
+                  Per},
+  journal =      {International Journal of Intelligent Systems},
+  volume =       {22},
+  number =       {12},
+  pages =        {1251--1269},
+  year =         {2007},
+  publisher =    {Wiley Online Library}
+}
+
+@inproceedings{garcia2018capture,
+  title =        {The capture-the-flag differential game},
+  author =       {Garcia, Eloy and Casbeer, David W and Pachter, Meir},
+  booktitle =    {2018 IEEE Conference on Decision and Control (CDC)},
+  pages =        {4167--4172},
+  year =         {2018},
+  organization = {IEEE}
+}
+
+@article{huang2014automation,
+  title =        {Automation-assisted capture-the-flag: A differential
+                  game approach},
+  author =       {Huang, Haomiao and Ding, Jerry and Zhang, Wei and
+                  Tomlin, Claire J},
+  journal =      {IEEE Transactions on Control Systems Technology},
+  volume =       {23},
+  number =       {3},
+  pages =        {1014--1028},
+  year =         {2014},
+  publisher =    {IEEE}
+}
+
+@inproceedings{oshart2019non,
+  title =        {Non-Uniform Policies for Multi-Robot Asymmetric
+                  Perimeter Patrol in Adversarial Domains},
+  author =       {Oshart, Yaniv and Agmon, Noa and Kraus, Sarit},
+  booktitle =    {2019 International Symposium on Multi-Robot and
+                  Multi-Agent Systems (MRS)},
+  pages =        {136--138},
+  year =         {2019},
+  organization = {IEEE}
+}
+
+
+@article{kose2017integrated,
+  title =        {An integrated approach based on game theory and
+                  geographical information systems to solve decision
+                  problems},
+  author =       {Kose, Erkan and Erbas, Mehmet and Ersen, Erkan},
+  journal =      {Applied Mathematics and Computation},
+  volume =       {308},
+  pages =        {105--114},
+  year =         {2017},
+  publisher =    {Elsevier}
+}
+
+
+@article{perlin1985image,
+  title =        {An image synthesizer},
+  author =       {Perlin, Ken},
+  journal =      {ACM Siggraph Computer Graphics},
+  volume =       {19},
+  number =       {3},
+  pages =        {287--296},
+  year =         {1985},
+  publisher =    {ACM New York, NY, USA}
+}
+
+@TechReport{haas2014history,
+  title =        {A history of the unity game engine},
+  author =       {Haas, John K},
+  year =         {2014},
+  institution =  {Worcester Polytechnic Institute}
+}
+
+@inproceedings{krishnan2011opentopography,
+  title =        {OpenTopography: a services oriented architecture for
+                  community access to LIDAR topography},
+  author =       {Krishnan, Sriram and Crosby, Christopher and
+                  Nandigam, Viswanath and Phan, Minh and Cowart,
+                  Charles and Baru, Chaitanya and Arrowsmith, Ramon},
+  booktitle =    {Proceedings of the 2nd International Conference on
+                  Computing for Geospatial Research \& Applications},
+  pages =        {1--8},
+  year =         {2011}
+}
+
+@article{dijkstra1959note,
+  title =        {A note on two problems in connexion with graphs},
+  author =       {Dijkstra, Edsger W and others},
+  journal =      {Numerische mathematik},
+  volume =       {1},
+  number =       {1},
+  pages =        {269--271},
+  year =         {1959}
+}
+
+
+@inproceedings{zeng2018robotic,
+  title =        {Robotic pick-and-place of novel objects in clutter
+                  with multi-affordance grasping and cross-domain
+                  image matching},
+  author =       {Zeng, Andy and Song, Shuran and Yu, Kuan-Ting and
+                  Donlon, Elliott and Hogan, Francois R and Bauza,
+                  Maria and Ma, Daolin and Taylor, Orion and Liu,
+                  Melody and Romo, Eudald and others},
+  booktitle =    {2018 IEEE international conference on robotics and
+                  automation (ICRA)},
+  pages =        {3750--3757},
+  year =         2018,
+  organization = {IEEE}
+}
+
+@article{rodriguez2012caging,
+  title =        {From caging to grasping},
+  author =       {Rodriguez, Alberto and Mason, Matthew T and Ferry,
+                  Steve},
+  journal =      {The International Journal of Robotics Research},
+  volume =       31,
+  number =       7,
+  pages =        {886--900},
+  year =         2012,
+  publisher =    {SAGE Publications Sage UK: London, England}
+}
+
+@inproceedings{bauza2018data,
+  title =        {A data-efficient approach to precise and controlled
+                  pushing},
+  author =       {Bauza, Maria and Hogan, Francois R and Rodriguez,
+                  Alberto},
+  booktitle =    {Conference on Robot Learning},
+  pages =        {336--345},
+  year =         2018,
+  organization = {PMLR}
+}
+
+@article{DBLP:journals/corr/abs-1711-08488,
+  author =       {Charles Ruizhongtai Qi and Wei Liu and Chenxia Wu
+                  and Hao Su and Leonidas J. Guibas},
+  title =        {Frustum PointNets for 3D Object Detection from
+                  {RGB-D} Data},
+  journal =      {CoRR},
+  volume =       {abs/1711.08488},
+  year =         2017,
+  url =          {http://arxiv.org/abs/1711.08488},
+  archivePrefix ={arXiv},
+  eprint =       {1711.08488},
+  timestamp =    {Wed, 11 Nov 2020 08:48:10 +0100},
+  biburl =
+                  {https://dblp.org/rec/journals/corr/abs-1711-08488.bib},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
+}
+
+@inproceedings{naik2019semantic,
+  title =        {Semantic mapping extension for OpenStreetMap applied
+                  to indoor robot navigation},
+  author =       {Naik, Lakshadeep and Blumenthal, Sebastian and
+                  Huebel, Nico and Bruyninckx, Herman and Prassler,
+                  Erwin},
+  booktitle =    {2019 International Conference on Robotics and
+                  Automation (ICRA)},
+  pages =        {3839--3845},
+  year =         2019,
+  organization = {IEEE}
+}
+
+@Article{kober13:RL,
+  author =       {J. Kober and J. Andrew bagnell and J. Peters},
+  title =        {Reinforcement Learning in Robotics - A Survey},
+  journal =      {Intl. Jour. of Robotics Research},
+  year =         2013,
+  volume =       32,
+  number =       11,
+  pages =        {1238--1274},
+  month =        {July}
+}
+
+@PhdThesis{huckaby14:thesis,
+  author =       {Jake Huckaby},
+  title =        {Knowledge Transfer in Robot Manipulation Tasks},
+  school =       {Electrical Engineering, Georgia Institute of
+                  Technology},
+  year =         2014,
+  address =      {Atlanta, GA},
+  month =        {June}
+}
+
+@inproceedings{allen2020virtualtools,
+  title =        {Rapid trial-and-error learning with simulation
+                  supports flexible tool use and physical reasoning},
+  author =       {Kelsey R. Allen and Kevin A. Smith and Joshua B.
+                  Tenenbaum},
+  year =         {2019},
+  journal =      {Proceedings of the National Academy of Sciences}
+}
+
+@article{slam21,
+  year =         2021,
+  title =        {{Advances in Inference and Representation for
+                  Simultaneous Localization and Mapping}},
+  author =       {Rosen, David M and Doherty, Kevin J and Espinoza,
+                  Antonio Teran and Leonard, John J},
+  journal =      {arXiv},
+  eprint =       {2103.05041},
+  abstract =     {{Simultaneous localization and mapping (SLAM) is the
+                  process of constructing a global model of an
+                  environment from local observations of it; this is a
+                  foundational capability for mobile robots,
+                  supporting such core functions as planning,
+                  navigation, and control. This article reviews recent
+                  progress in SLAM, focusing on advances in the
+                  expressive capacity of the environmental models used
+                  in SLAM systems (representation) and the performance
+                  of the algorithms used to estimate these models from
+                  data (inference). A prominent theme of recent SLAM
+                  research is the pursuit of environmental
+                  representations (including learned representations)
+                  that go beyond the classical attributes of geometry
+                  and appearance to model properties such as
+                  hierarchical organization, affordance, dynamics, and
+                  semantics; these advances equip autonomous agents
+                  with a more comprehensive understanding of the
+                  world, enabling more versatile and intelligent
+                  operation. A second major theme is a revitalized
+                  interest in the mathematical properties of the SLAM
+                  estimation problem itself (including its
+                  computational and information-theoretic performance
+                  limits); this work has led to the development of
+                  novel classes of certifiable and robust inference
+                  methods that dramatically improve the reliability of
+                  SLAM systems in real-world operation. We survey
+                  these advances with an emphasis on their
+                  ramifications for achieving robust, long-duration
+                  autonomy, and conclude with a discussion of open
+                  challenges and a perspective on future research
+                  directions.}},
+
+}
