--- a/bib-file.bib
+++ b/bib-file.bib
@@ -90827,3 +90827,16 @@
                   directions.}},
 
 }
+
+@Article{thomas16:graspTypes,
+  author =       {Thomas Feix, Javier Romero, Heinz-Bodo Schmiedmayer,
+                  Aaron M. Dollar, and Danica Kragic},
+  title =        {The {GRASP} Taxonomy of Human Grasp Types},
+  journal =      {IEEE Trans on Human-Machine Systems},
+  year =         2016,
+  volume =       46,
+  number =       1,
+  pages =        {66-72},
+  month =        {Feb}
+}
+
