--- a/bib-file.bib
+++ b/bib-file.bib
@@ -90828,7 +90828,7 @@
 
 }
 
-@Article{thomas16:graspTypes,
+`>@Article{thomas16:graspTypes,
   author =       {Thomas Feix, Javier Romero, Heinz-Bodo Schmiedmayer,
                   Aaron M. Dollar, and Danica Kragic},
   title =        {The {GRASP} Taxonomy of Human Grasp Types},
@@ -90838,5 +90838,32 @@
   number =       1,
   pages =        {66-72},
   month =        {Feb}
+}
+
+@article{DBLP:journals/corr/SpeerCH16,
+  author =       {Robyn Speer and Joshua Chin and Catherine Havasi},
+  title =        {ConceptNet 5.5: An Open Multilingual Graph of
+                  General Knowledge},
+  journal =      {CoRR},
+  volume =       {abs/1612.03975},
+  year =         {2016},
+  url =          {http://arxiv.org/abs/1612.03975},
+  archivePrefix ={arXiv},
+  eprint =       {1612.03975},
+  timestamp =    {Sat, 23 Jan 2021 01:19:45 +0100},
+  biburl =       {https://dblp.org/rec/journals/corr/SpeerCH16.bib},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
+}
+
+@article{winkler2016knowledge,
+  title =        {Knowledge-enabled robotic agents for shelf
+                  replenishment in cluttered retail environments},
+  author =       {Winkler, Jan and B{\'a}lint-Bencz{\'e}di, Ferenc and
+                  Wiedemeyer, Thiemo and Beetz, Michael and
+                  Vaskevicius, Narunas and Mueller, Christian A and
+                  Fromm, Tobias and Birk, Andreas},
+  journal =      {arXiv preprint arXiv:1605.04177},
+  year =         2016
 }
 
