TRO / PAMI from April 2021

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -90867,3 +90867,42 @@
   year =         2016
 }
 
+@Article{yang21:teaser,
+  author =       {Heng Yang and Jingnan Shi and Luca Carlone},
+  title =        {{TEASER}: Fast and Certifiable Point Cloud
+                  Registration},
+  journal =      {IEEE Trans. on Robotics},
+  year =         2021,
+  volume =       37,
+  number =       2,
+  pages =        {314--333},
+  month =        {Feb},
+  note =         {Certifiable PCD registration in the presence of
+                  outliers}
+}
+
+@Article{lee21:_dbf,
+  author =       {H. Lee and H. Kwon},
+  title =        {{DBF}: Dynamic Belief Fusion for Combining Multiple
+                  Object Detectors},
+  journal =      {IEEE Trans on Patt. Analysis and Mach. Intell.},
+  year =         2021,
+  volume =       43,
+  number =       5,
+  pages =        {1499--1514},
+  month =        {May}
+}
+
+
+@Article{han21:_image_based_objec_recon,
+  author =       {Xian-Feng Han and Hamid Laga and Mohammed Bennamoun},
+  title =        {Image-Based {3D} Object Reconstruction: State of the
+                  Art and Trends in the Deep Learning Era},
+  journal =      {IEEE Trans on Patt. Analysis and Mach. Intell.},
+  year =         2021,
+  volume =       43,
+  number =       5,
+  pages =        {1578--1604},
+  month =        {May}
+}
+
