Update post DCIST meeting

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95534,8 +95534,31 @@
                   Robotics - 2020 Edition},
   institution =  {UC San Diego / Computing Community Consortium},
   year =         2020,
-  address =   {La Jolla, CA},
-  month =     {Sep.},
+  address =      {La Jolla, CA},
+  month =        {Sep.},
   URL =          {https://cra.org/ccc/visioning/robotics-roadmap/}
+}
+
+@article{wang2021salient,
+  title =        {Salient object detection in the deep learning era:
+                  An in-depth survey},
+  author =       {Wang, Wenguan and Lai, Qiuxia and Fu, Huazhu and
+                  Shen, Jianbing and Ling, Haibin and Yang, Ruigang},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  year =         {2021},
+  publisher =    {IEEE}
+}
+
+@Article{macharet21:_minim_expos_dubin_orien_probl,
+  author =       {Douglas Macharet and Armando Neto and Daigo
+                  Shishika},
+  title =        {Minimal Exposure Dubins Orienteering Problem},
+  journal =      {IEEE Robotics and Automation Letters},
+  year =         2021,
+  volume =       6,
+  number =       2,
+  pages =        {2280-2227},
+  month =        {April}
 }
 
