UPdate post DCIST on game strategy

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95562,3 +95562,75 @@
   month =        {April}
 }
 
+@article{doi:10.1146/annurev-control-061520-010504,
+  author =       {Dellaert, Frank},
+  title =        {Factor Graphs: Exploiting Structure in Robotics},
+  journal =      {Annual Review of Control, Robotics, and Autonomous
+                  Systems},
+  volume =       4,
+  number =       1,
+  pages =        {141-166},
+  year =         2021,
+  doi =          {10.1146/annurev-control-061520-010504},
+  URL =          {
+                  https://doi.org/10.1146/annurev-control-061520-010504
+                  },
+  eprint =       {
+                  https://doi.org/10.1146/annurev-control-061520-010504
+                  }
+,
+  abstract =     { Many estimation, planning, and optimal control
+                  problems in robotics have an optimization problem at
+                  their core. In most of these optimization problems,
+                  the objective to be maximized or minimized is
+                  composed of many different factors or terms that are
+                  local in nature—that is, they depend only on a small
+                  subset of the variables. A particularly insightful
+                  way of modeling this locality structure is to use
+                  the concept of factor graphs, a bipartite graphical
+                  model in which factors represent functions on
+                  subsets of variables. Factor graphs can represent a
+                  wide variety of problems across robotics, expose
+                  opportunities to improve computational performance,
+                  and are beneficial in designing and thinking about
+                  how to model a problem, even aside from performance
+                  considerations. I discuss each of these three
+                  aspects in detail and review several
+                  state-of-the-art robotics applications in which
+                  factor graphs have been used with great success. }
+}
+
+@article{Albrecht_2018,
+  title =        {Autonomous agents modelling other agents: A
+                  comprehensive survey and open problems},
+  volume =       {258},
+  ISSN =         {0004-3702},
+  url =          {http://dx.doi.org/10.1016/j.artint.2018.01.002},
+  DOI =          {10.1016/j.artint.2018.01.002},
+  journal =      {Artificial Intelligence},
+  publisher =    {Elsevier BV},
+  author =       {Albrecht, Stefano V. and Stone, Peter},
+  year =         {2018},
+  month =        {May},
+  pages =        {66–95}
+}
+
+@article{zhuo2012action,
+  title =        {Action-model based multi-agent plan recognition},
+  author =       {Zhuo, Hankzhankui and Yang, Qiang and Kambhampati,
+                  Subbarao},
+  journal =      {Advances in Neural Information Processing Systems
+                  25},
+  volume =       {1},
+  pages =        {368},
+  year =         {2012}
+}
+
+@inproceedings{zhuo2011multi,
+  title =        {Multi-agent plan recognition with partial team
+                  traces and plan libraries},
+  author =       {Zhuo, Hankz Hankui and Li, Lei},
+  booktitle =    {Twenty-Second International Joint Conference on
+                  Artificial Intelligence},
+  year =         {2011}
+}
