Update after Science Roboitcs Special Issue on Robot Manupulation

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -93,7 +93,7 @@
 @string{erlort = {Hillsdale, NJ}}
 @string{eup = {Edinburgh University Press}}
 @string{euport = {Edinburgh, UK}}
-@string{fal = {Fall}}
+>@string{fal = {Fall}}
 @string{feb = {February}}
 @string{ftcs = {Proc. International Symp. on Fault-Tolerant Computing}}
 @string{gmr = {General Motors Research Laboratories}}
@@ -95634,3 +95634,37 @@
                   Artificial Intelligence},
   year =         {2011}
 }
+
+@Article{cui21:_towar,
+  author =       {Jinda Cui and Jeff Trinkle},
+  title =        {Towards next generaiton leared robot manipulation},
+  journal =      {Science Robotics},
+  year =         2021,
+  volume =       6,
+  number =       54,
+  month =        {May},
+}
+
+@Article{yin21:_model,
+  author =       {Hang Yin and ANastasia Varava and Danica Kragic},
+  title =        {Modeling, learning, perception, and control methods
+                  for deformable object manipulation},
+  journal =      {Science Robotics},
+  year =         2021,
+  volume =       6,
+  number =       54,
+  month =        {May}
+}
+
+
+@Article{bircher21:_compl,
+  author =       {Walter Bircher and Andrew Morgan and Aaron Dollar},
+  title =        {Complex manipulation with a simple robotic hand
+                  through contact breaking and caging},
+  journal =      {Science Robotics},
+  year =         2021,
+  volume =       6,
+  number =       54,
+  month =        {May}
+}
+
